# backtester

./: .gitignore  pyproject.toml
src/backtester/: backtest_runner.py  main.py
src/models/: action.py  candle.py  player.py  strategy.py
src/strategies/: random_strategy.py
