[project]
name = "backtester"
version = "0.1.0"
description = ""
authors = [
    {name = "minkaizen",email = "martin.g.cao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic (>=2.11.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "backtester", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
